src/test/examples/custom/valid/class/constructorContainsAllAttributesEasy.wacc
# Constructor must contain all attributes

begin
  class H is 
    private int v
  end
  int u = 0
end