src/test/examples/custom/invalid/semanticErr/class/constructorNotBeingTheSameNameAsClass.wacc
# Class and constructor must have same name

begin
  class H is 
    private int v
    K(int v) end
  end
  int u = 0
end